[gd_scene load_steps=10 format=3 uid="uid://dodu8jdt3nw06"]

[ext_resource type="Theme" uid="uid://cmd714lbb53ja" path="res://assets/resources/themes/ui_theme.tres" id="1_d5vm4"]
[ext_resource type="Script" uid="uid://cl8r0t4s4jk48" path="res://assets/scenes/ui/GamePauseMenu.gd" id="1_h7sny"]
[ext_resource type="PackedScene" uid="uid://wncyofb1f8i7" path="res://assets/scenes/ui/options/optionsMenu.tscn" id="1_nxica"]
[ext_resource type="PackedScene" uid="uid://ba0s8u6mtjxns" path="res://assets/scenes/menu/menuButton.tscn" id="3_mr0iv"]
[ext_resource type="AudioStream" uid="uid://08mwbmwvrolu" path="res://assets/sounds/ui/uiAppear2.wav" id="5_0havd"]
[ext_resource type="PackedScene" uid="uid://81cyr0xg0y7d" path="res://assets/scenes/ui/saveloadmenu/saveloadmenu.tscn" id="5_j4k36"]
[ext_resource type="AudioStream" uid="uid://c8f4j3xitvvuk" path="res://assets/sounds/ui/uialert.wav" id="6_raf1m"]

[sub_resource type="Gradient" id="Gradient_flboi"]
offsets = PackedFloat32Array(0, 0.171171, 1)
colors = PackedColorArray(0, 0, 0, 0.67451, 0.0235294, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jqr86"]
gradient = SubResource("Gradient_flboi")
fill_from = Vector2(1, 1)
fill_to = Vector2(1, 0.5)
repeat = 2

[node name="GamePauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_d5vm4")
script = ExtResource("1_h7sny")

[node name="gradientBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_jqr86")

[node name="panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.611765)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -199.0
offset_right = 220.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -181.0
offset_right = 66.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 46
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -98.0
offset_right = 164.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" parent="buttons" instance=ExtResource("3_mr0iv")]
layout_mode = 2
text = "Resume"

[node name="SaveButton" parent="buttons" instance=ExtResource("3_mr0iv")]
layout_mode = 2
text = "Save Game
"

[node name="LoadButton" parent="buttons" instance=ExtResource("3_mr0iv")]
layout_mode = 2
text = "Load Game
"

[node name="OptionsButton" parent="buttons" instance=ExtResource("3_mr0iv")]
layout_mode = 2
text = "Options"

[node name="menuButton" parent="buttons" instance=ExtResource("3_mr0iv")]
layout_mode = 2
text = "exit to menu"

[node name="Options" parent="." instance=ExtResource("1_nxica")]
visible = false
layout_mode = 1

[node name="saveloadmenu" parent="." instance=ExtResource("5_j4k36")]
visible = false
layout_mode = 1

[node name="audioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0havd")
volume_db = -10.0
bus = &"UI"

[node name="audioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_raf1m")
volume_db = -15.0
bus = &"UI"

[connection signal="pressed" from="buttons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="buttons/SaveButton" to="saveloadmenu" method="show"]
[connection signal="pressed" from="buttons/SaveButton" to="saveloadmenu" method="initSavePanel"]
[connection signal="pressed" from="buttons/LoadButton" to="saveloadmenu" method="show"]
[connection signal="pressed" from="buttons/LoadButton" to="saveloadmenu" method="initLoadPanel"]
[connection signal="pressed" from="buttons/OptionsButton" to="Options" method="show"]
[connection signal="pressed" from="buttons/menuButton" to="." method="_on_menu_button_pressed"]
